mas estilos básicos

--- a/src/Components/NavBar/CartWidget/CartWidget.css
+++ b/src/Components/NavBar/CartWidget/CartWidget.css
@@ -1,10 +1,13 @@
 .conjunto-widget{
     display: flex;
-    flex-wrap: nowrap;
+    
     color: white;
     justify-content:center;
-    align-items: center;
+    align-items: flex-end;
+    align-content: center;
+    justify-items: center;
 }
 .carrito{
-    width: 50px;
+    width: 10%;
+    
 }
